# examples

./: .gitmodules  Cargo.toml  README.md
badge_auth/: Cargo.toml
badge_auth/src/: badge_auth.rs
badge_auth/src/random_provider/: mod.rs
badge_auth/tests/: lib.rs
basic/: Cargo.toml
basic/src/: basic.rs
basic/tests/: lib.rs
bucket_transfer_auth/: Cargo.toml
bucket_transfer_auth/src/: bucket_transfer_auth.rs
bucket_transfer_auth/tests/: lib.rs
