[package]
edition = "2021"
name = "bucket_transfer_auth"
version = "0.1.0"


[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
random = { git = "https://github.com/dot-random/dot-random", tag = "v0.1-scrypto-1.1.2", package = "random" }


[dev-dependencies]
bucket_transfer_auth = { path = ".", features = ["test"] }
dot-random-test-utils = { git = "https://github.com/dot-random/dot-random", tag = "v0.1-scrypto-1.1.2", package = "test-utils" }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
path = "src/bucket_transfer_auth.rs"