[package]
edition = "2021"
name = "bucket_transfer_auth"
version = "0.1.0"


[dependencies]
sbor = { version = "1.2.0" }
scrypto = { version = "1.2.0" }
random = { git = "https://github.com/dot-random/dot-random", tag = "v0.1-scrypto-1.2.0", package = "random" }


[dev-dependencies]
bucket_transfer_auth = { path = ".", features = ["test"] }
dot-random-test-utils = { git = "https://github.com/dot-random/dot-random", tag = "v0.1-scrypto-1.2.0", package = "test-utils" }
radix-transactions = { version = "1.2.0" }
radix-engine = { version = "1.2.0" }
scrypto-test = { version = "1.2.0" }

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
path = "src/bucket_transfer_auth.rs"